--- a/src/main/resources/static/executives.html
+++ b/src/main/resources/static/executives.html
@@ -1089,7 +1089,7 @@
             <div class="exec-highlight">
                 <p><strong>Head of Project Management Office – FMCG Market Leader</strong><br>
                     → Coordinated corporate strategy cycles and affiliate-wide commercial planning<br>
-                    → Oversaw 90+ projects, delivering multiple high-impact transformation programs</p><br>
+                    → Oversaw 90+ business critical projects, delivering multiple high-impact transformation programs</p><br>
             </div>
 
             <div class="exec-highlight">
